--- a/pages/sobrenosotras.html
+++ b/pages/sobrenosotras.html
@@ -12,77 +12,80 @@
     <title>Womap</title>
     <link href="../styles/styles.css" rel="stylesheet" />
 	</head>
-	<section class="grid2">
-		<header>
+	<body class="bodyNosotras">
+		<header class="fixed-top">
 			<div class="container">
 				<div class="row">
-					<h2>Womap</h2>
-					<nav>
-					<ul class="navBar">
-						<li><a class="itemNav" href="../index.html"> Inicio </a></li>
-						<li>
-						<a class="itemNav" href="sobrenosotras.html"
-							>Sobre Nosotras</a
-						>
-						</li>
-						<li>
-						<a class="itemNav" href="laApp.html">La App</a>
-						</li>
-						<li>
-						<a class="itemNav" href="preguntasFrecuentes.html"
-							>Preguntas Frecuentes</a
-						>
-						</li>
-						<li>
-						<a class="itemNav" href="contactanos.html">Contactanos</a>
-						</li>
-					</ul>
+					<nav class="navbar navbar-expand-lg">
+						<div class="container-fluid">
+							<a class="navbar-brand text-white fs-3" href="#">Womap</a>
+							<button class="navbar-toggler w-25 p-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+								<span class="navbar-toggler-icon"></span>
+							</button>
+							<div class="collapse navbar-collapse" id="navbarSupportedContent">
+								<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+									<li class="nav-item">
+										<a class="nav-link text-white" aria-current="page" href="../index.html">Inicio</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link active text-white" href="sobrenosotras.html">Sobre Nosotras</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link text-white" href="laApp.html">La App</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link text-white" href="preguntasFrecuentes.html">Preguntas Frecuentes</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link text-white" href="contactanos.html">Contactanos</a>
+									</li>
+								</ul>
+							</div>
+						</div>
 					</nav>
 				</div>
 			</div>
 		</header>
-		<body>
+		<main class="mainNosotras">
 			<section class="sobreNosotras1">
 				<div class="grilla">
 					<div class="sobreNosotrasTx">
 						<div id="nosP1">
-							<h2 class="titNos">La problemática</h2>
+							<h1 class="titNos">La problemática</h1>
 							<p class="pNos">
-									Al escribir en el buscador "Mujeres desaparecidas Argentina",
-									son incontables la cantidad de resultados que obtenemos. En
-									Argentina, el 80% de las mujeres se sienten inseguras al estar
-									en la calles. De acuerdo a un informe realizado en 2017-2018,
-									"transitar el espacio público se les presenta a las mujeres como
-									una actividad poco segura, la cual no se puede realizar de
-									manera libre y sin condicionamientos." El año pasado hubo en
-									Argentina un total de 251 femicidios. Lo que equivale a un
-									femicidio cada 35 horas. En el año 2019, con la muerte de
-									Agustina Imvinkelried, se viralizó en las redes una
-									manifestación: "Amiga, llegaste?" Esta es solo una de las
-									variantes del mismo mensaje que utilizamos las mujeres para
-									cuidarnos entre nosotras, porque sabemos que nos puede pasar
-									cualquier cosa en la calle.
+								Al escribir en el buscador "Mujeres desaparecidas Argentina",
+								son incontables la cantidad de resultados que obtenemos. En
+								Argentina, el 80% de las mujeres se sienten inseguras al estar
+								en la calles. De acuerdo a un informe realizado en 2017-2018,
+								transitar el espacio público se les presenta a las mujeres como
+								una actividad poco segura, la cual no se puede realizar de
+								manera libre y sin condicionamientos." El año pasado hubo en
+								Argentina un total de 251 femicidios. Lo que equivale a un
+								femicidio cada 35 horas. En el año 2019, con la muerte de
+								Agustina Imvinkelried, se viralizó en las redes una
+								manifestación: "Amiga, llegaste?" Esta es solo una de las
+								variantes del mismo mensaje que utilizamos las mujeres para
+								cuidarnos entre nosotras, porque sabemos que nos puede pasar
+								cualquier cosa en la calle.
 							</p>
 						</div>
 						<div id="nosP2">
 							<h2 class="titNos">
-									De estas bases, y con el dolor de esta situación, nace Womap
+								De estas bases, y con el dolor de esta situación, nace Womap
 							</h2>
 							<p class="pNos">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-									id ullamcorper felis. Morbi ut dolor eu enim mollis feugiat eu
-									quis ex. Suspendisse semper arcu id nibh dapibus, quis dapibus
-									tellus rutrum. Fusce sollicitudin lorem viverra justo congue
-									eleifend. Sed faucibus condimentum nisi, ut aliquet leo sagittis
-									sit amet. Sed porttitor, risus laoreet pretium viverra, risus
-									augue fermentum nisl, non pulvinar metus eros non enim. Donec id
-									nulla a turpis rutrum posuere faucibus eu ante.
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+								id ullamcorper felis. Morbi ut dolor eu enim mollis feugiat eu
+								quis ex. Suspendisse semper arcu id nibh dapibus, quis dapibus
+								tellus rutrum. Fusce sollicitudin lorem viverra justo congue
+								eleifend. Sed faucibus condimentum nisi, ut aliquet leo sagittis
+								sit amet.
 							</p>
 						</div>
 					</div>
 					<div class="circTx1">
 						<img
-							class="circ"
+							class="circ d-none d-md-block"
 							id="circ1"
 							src="../img/circulos rosas 1-05.png"
 							alt=""
@@ -90,7 +93,7 @@
 					</div>
 					<div class="circTx2">
 						<img
-							class="circ"
+							class="circ d-none d-md-block"
 							id="circ2"
 							src="../img/circulos rosas 2-06.png"
 							alt=""
@@ -98,69 +101,77 @@
 					</div>
 					<div class="circTx3">
 						<img
-							class="circ"
+							class="circ d-none d-md-block"
 							id="circ3"
 							src="../img/circulos rosas 3-07.png"
-							alt=""
+								alt=""
 						/>
 					</div>
 				</div>
 			</section>
 			<section class="mision">
-				<div class="container">
+				<div>
 					<div class="nuestraMision">
 						<h2 class="titNos">Nuestra Misión</h2>
-						<p class="pNos">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id
-							ullamcorper felis. Morbi ut dolor eu enim mollis feugiat eu quis ex.
-							Suspendisse semper arcu id nibh dapibus, quis dapibus tellus rutrum.
-							Fusce sollicitudin lorem viverra justo congue eleifend. Sed faucibus
-							condimentum nisi, ut aliquet leo sagittis sit amet. Sed porttitor,
-							risus laoreet pretium viverra, risus augue fermentum nisl, non
-							pulvinar metus eros non enim. Donec id nulla a turpis rutrum posuere
-							faucibus eu ante.
-						</p>
+							<p class="pNos">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id
+								ullamcorper felis. Morbi ut dolor eu enim mollis feugiat eu quis ex.
+								Suspendisse semper arcu id nibh dapibus, quis dapibus tellus rutrum.
+								Fusce sollicitudin lorem viverra justo congue eleifend. Sed faucibus
+								condimentum nisi, ut aliquet leo sagittis sit amet. Sed porttitor,
+								risus laoreet pretium viverra, risus augue fermentum nisl, non
+								pulvinar metus eros non enim.
+							</p>
 					</div>
 					<div class="video">
 						<!--video elevator pitch-->
-						<iframe
-							src="https://www.youtube.com/embed/RDrqKaajE6Q"
-							title="YouTube video player"
-							frameborder="0"
-							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-							allowfullscreen
-						></iframe>
+						<iframe width="560"
+						height="315"
+						src="https://www.youtube.com/embed/RDrqKaajE6Q"
+						title="YouTube video player"
+						frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+						allowfullscreen></iframe>
 					</div>
 				</div>
 			</section>
-		</body>
-		<footer>
-			<div class="container">
-				<div class="redes">
-					<div class="logoFooter">
-						<!-- probar dispo logo -->
-						<img
-							class="logoWomapFooter"
-							src="../img/logo womap png redondeado-08.png"
-							alt="logo womap"
-						/>
-						<h4 class="nombreFooter">Womap</h4>
-					</div>
-					<div class="icons">
-						<!--redes-->
-						<img class="icon" src="../img/instagram.png" alt="icon instagram" />
-						<p class="iconTx">@WomapApp</p>
-						<img class="icon" src="../img/gorjeo.png" alt="icon twitter" />
-						<p class="iconTx">@WomapApp</p>
-						<img
-							class="icon"
-							src="../img/logotipo-de-linkedin.png"
-							alt="icon linkedin"
-						/>
-						<p class="iconTx">Womap</p>
+		</main>
+		<footer class="fixed-bottom">
+			<div>
+				<div class="fixed-bottom">
+					<div class="redes">
+						<div class="logoFooter">
+							<!-- probar dispo logo -->
+							<img
+								class="logoWomapFooter"
+								src="../img/logo womap png redondeado-08.png"
+								alt="logo womap"
+							/>
+							<h4 class="nombreFooter">Womap</h4>
+						</div>
+						<div class="icons">
+							<!--redes-->
+							<img class="icon" src="../img/instagram.png" alt="icon instagram" />
+							<p class="iconTx d-none d-lg-block">@WomapApp</p>
+							<img class="icon" src="../img/gorjeo.png" alt="icon twitter" />
+							<p class="iconTx d-none d-lg-block">@WomapApp</p>
+							<img
+								class="icon"
+								src="../img/logotipo-de-linkedin.png"
+								alt="icon linkedin"
+							/>
+							<p class="iconTx d-none d-lg-block">Womap</p>
+						</div>
 					</div>
 				</div>
 			</div>
 		</footer>
-	</section>
+		<!--bootstrap-->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+		rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+		crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+		crossorigin="anonymous"></script>
+	</body>
 </html>
