--- a/index.html
+++ b/index.html
@@ -1,98 +1,114 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--css-->
-    <link href="styles/styles.css" rel="stylesheet" />
-    <!--logo-->
-    <link
-      rel="shortcut icon"
-      href="img/logo womap png redondeado-08.png"
-      type="image/x-icon"
-    />
-    <!--font raleway-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap"
-      rel="stylesheet"
-    />
-    <title>Womap</title>
-  </head>
-  	<section class="grid">
-		<header>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!--css-->
+		<link href="styles/styles.css" rel="stylesheet" />
+		<!--logo-->
+		<link
+		rel="shortcut icon"
+		href="img/logo womap png redondeado-08.png"
+		type="image/x-icon"
+		/>
+		<!--font raleway-->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+		href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap"
+		rel="stylesheet"
+		/>
+		<title>Womap</title>
+	</head>
+	<body class="bodyInicio">
+		<header class="fixed-top">
 			<div class="container">
 				<div class="row">
-					<h2>Womap</h2>
-					<nav>
-					<ul class="navBar">
-						<li><a class="itemNav" href="/"> Inicio </a></li>
-						<li>
-						<a class="itemNav" href="pages/sobrenosotras.html"
-							>Sobre Nosotras</a
-						>
-						</li>
-						<li>
-						<a class="itemNav" href="pages/laApp.html">La App</a>
-						</li>
-						<li>
-						<a class="itemNav" href="pages/preguntasFrecuentes.html"
-							>Preguntas Frecuentes</a
-						>
-						</li>
-						<li>
-						<a class="itemNav" href="pages/contactanos.html">Contactanos</a>
-						</li>
-					</ul>
+					<nav class="navbar navbar-expand-lg">
+						<div class="container-fluid">
+							<a class="navbar-brand text-white fs-3" href="#">Womap</a>
+							<button class="navbar-toggler w-25 p-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+								<span class="navbar-toggler-icon"></span>
+							</button>
+							<div class="collapse navbar-collapse" id="navbarSupportedContent">
+								<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+									<li class="nav-item">
+										<a class="nav-link active text-white" aria-current="page" href="index.html">Inicio</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link text-white" href="pages/sobreNosotras.html">Sobre Nosotras</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link text-white" href="pages/laApp.html">La App</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link text-white" href="pages/preguntasFrecuentes.html">Preguntas Frecuentes</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link text-white" href="pages/contactanos.html">Contactanos</a>
+									</li>
+								</ul>
+							</div>
+						</div>
 					</nav>
 				</div>
 			</div>
 		</header>
-		<body>
-			<section class="inicio">
-				<div class="imagenTexto">
-					<div class="txInicio">
-						<h1 class="itemTitTx">Womap</h1>
-						<p class="itemTx">
-							La aplicación de seguimiento y seguridad, creada por y para mujeres.
-						</p>
-						<div class="buttons">
-							<button class="itemTx">Descargala en Play Store</button>
-							<button class="itemTx">Descargala en App Store</button>
-						</div>
+		<main class="inicio">
+			<div class="imagenTexto">
+				<div class="txInicio">
+					<h1 class="itemTitTx">Womap</h1>
+					<p class="itemTx">
+						La aplicación de seguimiento y seguridad, creada por y para mujeres.
+					</p>
+					<div class="buttons">
+						<button class="botonInicio btn btn-danger mb-3">Descargala en Play Store</button>
+						<button class="botonInicio btn btn-danger mb-3">Descargala en App Store</button>
 					</div>
 				</div>
-			</section>
-		</body>
-		<footer>
-			<div class="container">
-				<div class="redes">
-					<div class="logoFooter">
-						<!-- probar dispo logo -->
-						<img
-							class="logoWomapFooter"
-							src="img/logo womap png redondeado-08.png"
-							alt="logo womap"
-						/>
-						<h4 class="nombreFooter">Womap</h4>
-					</div>
-					<div class="icons">
-						<!--redes-->
-						<img class="icon" src="img/instagram.png" alt="icon instagram" />
-						<p class="iconTx">@WomapApp</p>
-						<img class="icon" src="img/gorjeo.png" alt="icon twitter" />
-						<p class="iconTx">@WomapApp</p>
-						<img
-							class="icon"
-							src="img/logotipo-de-linkedin.png"
-							alt="icon linkedin"
-						/>
-						<p class="iconTx">Womap</p>
+			</div>
+			<div class="vector fixed-bottom">
+				<img src="img/Women-Vector-PNG.png" alt="" class="img-fluid w-30 d-block d-sm-none">
+			</div>
+		</main>
+		<footer class="fixed-bottom">
+			<div>
+				<div class="fixed-bottom">
+					<div class="redes">
+						<div class="logoFooter">
+							<!-- probar dispo logo -->
+							<img
+								class="logoWomapFooter"
+								src="img/logo womap png redondeado-08.png"
+								alt="logo womap"
+							/>
+							<h4 class="nombreFooter">Womap</h4>
+						</div>
+						<div class="icons">
+							<!--redes-->
+							<img class="icon" src="img/instagram.png" alt="icon instagram" />
+							<p class="iconTx d-none d-lg-block">@WomapApp</p>
+							<img class="icon" src="img/gorjeo.png" alt="icon twitter" />
+							<p class="iconTx d-none d-lg-block">@WomapApp</p>
+							<img
+								class="icon"
+								src="img/logotipo-de-linkedin.png"
+								alt="icon linkedin"
+							/>
+							<p class="iconTx d-none d-lg-block">Womap</p>
+						</div>
 					</div>
 				</div>
 			</div>
 		</footer>
-	</section>
+		<!--bootstrap-->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+		rel="stylesheet"
+		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+		crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+		crossorigin="anonymous"></script>
+	</body>
 </html>
