--- a/pages/laApp.html
+++ b/pages/laApp.html
@@ -12,87 +12,100 @@
 		<title>Womap</title>
 		<link href="../styles/styles.css" rel="stylesheet" />
 	</head>
-	<section class="grid">
-		<header>
+	<body>
+		<header class="fixed-top">
 			<div class="container">
 				<div class="row">
-					<h1>Womap</h1>
-					<nav>
-					<ul class="navBar">
-						<li><a class="itemNav" href="../index.html"> Inicio </a></li>
-						<li>
-						<a class="itemNav" href="sobrenosotras.html"
-							>Sobre Nosotras</a
-						>
-						</li>
-						<li>
-						<a class="itemNav" href="laApp.html">La App</a>
-						</li>
-						<li>
-						<a class="itemNav" href="preguntasFrecuentes.html"
-							>Preguntas Frecuentes</a
-						>
-						</li>
-						<li>
-						<a class="itemNav" href="contactanos.html">Contactanos</a>
-						</li>
-					</ul>
+					<nav class="navbar navbar-expand-lg">
+						<div class="container-fluid">
+						  <a class="navbar-brand text-white fs-3" href="#">Womap</a>
+						  <button class="navbar-toggler w-25 p-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+							<span class="navbar-toggler-icon"></span>
+						  </button>
+						  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+								<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+									<li class="nav-item">
+										<a class="nav-link text-white" aria-current="page" href="../index.html">Inicio</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link active text-white" href="sobrenosotras.html">Sobre Nosotras</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link text-white" href="laApp.html">La App</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link text-white" href="preguntasFrecuentes.html">Preguntas Frecuentes</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link text-white" href="contactanos.html">Contactanos</a>
+									</li>
+								</ul>
+						  </div>
+						</div>
 					</nav>
 				</div>
 			</div>
 		</header>
-		<body>
-			<section class="laApp">
-				<div class="container">
-					<div class="txImgApp">
-						<div class="txApp">
-							<article>
-							<p id="txApp">
+		<main class="laApp">
+			<div class="container">
+				<div class="txImgApp">
+					<div class="txApp">
+						<article>
+							<p class="infoApp">
 								Nuestro objetivo es lograr que las mujeres nos sintamos un poco
 								más seguras al transitar la via pública sin compañía, con el
 								conocimiento de que alguien siempre estará atento ante cualquier
 								inconveniente.
 							</p>
-							</article>
-						</div>
-						<div>
-							<img
-							class="mockup1"
+						</article>
+					</div>
+					<div>
+						<img
+							class="mockup1 fixed-bottom"
 							src="../img/mockup medio celu perspect.png"
 							alt="mockup aplicacion womap"
 							/>
-						</div>
 					</div>
 				</div>
-			</section>
-		</body>
-		<footer>
-			<div class="container">
-				<div class="redes">
-					<div class="logoFooter">
-						<!-- probar dispo logo -->
-						<img
-							class="logoWomapFooter"
-							src="../img/logo womap png redondeado-08.png"
-							alt="logo womap"
-						/>
-						<h4 class="nombreFooter">Womap</h4>
-					</div>
-					<div class="icons">
-						<!--redes-->
-						<img class="icon" src="../img/instagram.png" alt="icon instagram" />
-						<p class="iconTx">@WomapApp</p>
-						<img class="icon" src="../img/gorjeo.png" alt="icon twitter" />
-						<p class="iconTx">@WomapApp</p>
-						<img
-							class="icon"
-							src="../img/logotipo-de-linkedin.png"
-							alt="icon linkedin"
-						/>
-						<p class="iconTx">Womap</p>
+			</div>
+		</main>
+		<footer class="fixed-bottom">
+			<div>
+				<div class="fixed-bottom">
+					<div class="redes">
+						<div class="logoFooter">
+							<!-- probar dispo logo -->
+							<img
+								class="logoWomapFooter"
+								src="../img/logo womap png redondeado-08.png"
+								alt="logo womap"
+							/>
+							<h4 class="nombreFooter">Womap</h4>
+						</div>
+						<div class="icons">
+							<!--redes-->
+							<img class="icon" src="../img/instagram.png" alt="icon instagram" />
+							<p class="iconTx d-none d-lg-block">@WomapApp</p>
+							<img class="icon" src="../img/gorjeo.png" alt="icon twitter" />
+							<p class="iconTx d-none d-lg-block">@WomapApp</p>
+							<img
+								class="icon"
+								src="../img/logotipo-de-linkedin.png"
+								alt="icon linkedin"
+							/>
+							<p class="iconTx d-none d-lg-block">Womap</p>
+						</div>
 					</div>
 				</div>
 			</div>
 		</footer>
-	</section>
+		<!--bootstrap-->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+		rel="stylesheet"
+		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+		crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+		crossorigin="anonymous"></script>
+	</body>
 </html>
