Implementacion de sass

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Womap. La aplicación de seguimiento y seguridad creada por y para mujeres. Descargala en App Store y Play Store." />
+		<meta name="keywords" content="aplicación, aplicacion, app, seguridad, mujeres, seguimiento, ubicación, ubicacion, gps, localizador, mujer, descarga" />
 		<!--css-->
-		<link href="styles/styles.css" rel="stylesheet" />
+		<link href="css/style.css" rel="stylesheet"/>
 		<!--logo-->
 		<link
 		rel="shortcut icon"
@@ -27,7 +29,7 @@
 				<div class="row">
 					<nav class="navbar navbar-expand-lg">
 						<div class="container-fluid">
-							<a class="navbar-brand text-white fs-3" href="#">Womap</a>
+							<a class="navbar-brand text-white fs-3" href="index.html">Womap</a>
 							<button class="navbar-toggler w-25 p-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"></span>
 							</button>
@@ -55,22 +57,24 @@
 				</div>
 			</div>
 		</header>
-		<main class="inicio">
-			<div class="imagenTexto">
-				<div class="txInicio">
-					<h1 class="itemTitTx">Womap</h1>
-					<p class="itemTx">
-						La aplicación de seguimiento y seguridad, creada por y para mujeres.
-					</p>
-					<div class="buttons">
-						<button class="botonInicio btn btn-danger mb-3">Descargala en Play Store</button>
-						<button class="botonInicio btn btn-danger mb-3">Descargala en App Store</button>
+		<main class="inicio container-main-womap">
+			<section class="position-relative bg-main-womap h-100">
+				<div class="imagenTexto container h-100 position-relative">
+					<div class="txInicio d-flex flex-column justify-content-center h-100">
+						<h1 class="itemTitTx">Womap</h1>
+						<p class="itemTx">
+							La aplicación de seguimiento y seguridad, creada por y para mujeres.
+						</p>
+						<div class="buttons">
+							<button class="botonInicio btn btn-danger mb-3">Descargala en Play Store</button>
+							<button class="botonInicio btn btn-danger mb-3">Descargala en App Store</button>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="vector fixed-bottom">
-				<img src="img/Women-Vector-PNG.png" alt="" class="img-fluid w-30 d-block d-sm-none">
-			</div>
+				<div class="vector fixed-bottom">
+					<img src="img/Women-Vector-PNG.png" alt="vector colorido mujeres" class="img-fluid w-30 d-block d-sm-none">
+				</div>
+			</section>
 		</main>
 		<footer class="fixed-bottom">
 			<div>
