--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -4,13 +4,15 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Womap. La aplicación de seguimiento y seguridad creada por y para mujeres. Descargala en App Store y Play Store." />
+	<meta name="keywords" content="Womap, aplicación, aplicacion, app, seguridad, mujeres, seguimiento, contacto, mail, contactar, info, informacion, información" />
 		<link
 		rel="shortcut icon"
 		href="../img/logo womap png redondeado-08.png"
 		type="image/x-icon"
 		/>
-		<title>Womap</title>
-		<link href="../styles/styles.css" rel="stylesheet" />
+		<title>Womap | Contacto</title>
+		<link href="../css/style.css" rel="stylesheet" />
 	</head>
 	<body>
 		<header class="fixed-top">
@@ -18,7 +20,7 @@
 				<div class="row">
 					<nav class="navbar navbar-expand-lg">
 						<div class="container-fluid">
-						  <a class="navbar-brand text-white fs-3" href="#">Womap</a>
+						  <a class="navbar-brand text-white fs-3" href="../index.html">Womap</a>
 						  <button class="navbar-toggler w-25 p-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
 						  </button>
@@ -47,37 +49,30 @@
 			</div>
 		</header>
 		<main class="contacto">
+			<!--formulario-->
 			<div>
 				<div class="datos">
 					<form action="submit">
-						<div>
-							<input
-								class="dat"
-								type="text"
-								placeholder="Nombre"
-							/>
-						</div>
-						<div>
-							<input
-								class="dat"
-								type="text"
-								placeholder="Apellido"
-							/><br />
-						</div>
-						<div>
-							<input
-								class="dat"
-								type="text"
-								placeholder="Mail"
-							/><br />
-						</div>
-						<div>
-							<input
-								class="datMsj"
-								type="text"
-								placeholder="Mensaje"
-							/>
-						</div>
+						<input
+							class="dat"
+							type="text"
+							placeholder="Nombre"
+						/><br />
+						<input
+							class="dat"
+							type="text"
+							placeholder="Apellido"
+						/><br />
+						<input
+							class="dat"
+							type="text"
+							placeholder="Mail"
+						/><br />
+						<input
+							class="datMsj"
+							type="text"
+							placeholder="Mensaje"
+						/>
 					</form>
 				</div>
 			</div>
