--- a/pages/laApp.html
+++ b/pages/laApp.html
@@ -4,13 +4,15 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Womap. La aplicación de seguimiento y seguridad creada por y para mujeres. Descargala en App Store y Play Store." />
+		<meta name="keywords" content="aplicación, aplicacion, app, seguridad, mujeres, seguimiento, ubicación, ubicacion, detalle, detalles, info, informacion, información" />
 		<link
 		rel="shortcut icon"
 		href="../img/logo womap png redondeado-08.png"
 		type="image/x-icon"
 		/>
-		<title>Womap</title>
-		<link href="../styles/styles.css" rel="stylesheet" />
+		<title>Womap | La App</title>
+		<link href="../css/style.css" rel="stylesheet" />
 	</head>
 	<body>
 		<header class="fixed-top">
@@ -18,7 +20,7 @@
 				<div class="row">
 					<nav class="navbar navbar-expand-lg">
 						<div class="container-fluid">
-						  <a class="navbar-brand text-white fs-3" href="#">Womap</a>
+						  <a class="navbar-brand text-white fs-3" href="../index.html">Womap</a>
 						  <button class="navbar-toggler w-25 p-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
 						  </button>
@@ -47,25 +49,23 @@
 			</div>
 		</header>
 		<main class="laApp">
-			<div class="container">
-				<div class="txImgApp">
-					<div class="txApp">
-						<article>
-							<p class="infoApp">
+			<div class="txImgApp">
+				<div class="txApp">
+					<article>
+						<p class="infoApp">
 								Nuestro objetivo es lograr que las mujeres nos sintamos un poco
 								más seguras al transitar la via pública sin compañía, con el
 								conocimiento de que alguien siempre estará atento ante cualquier
 								inconveniente.
-							</p>
-						</article>
-					</div>
-					<div>
-						<img
-							class="mockup1 fixed-bottom"
-							src="../img/mockup medio celu perspect.png"
-							alt="mockup aplicacion womap"
-							/>
-					</div>
+						</p>
+					</article>
+				</div>
+				<div>
+					<img
+						class="mockup1 fixed-bottom"
+						src="../img/mockup medio celu perspect.png"
+						alt="mockup aplicación womap"
+					/>
 				</div>
 			</div>
 		</main>
