--- a/pages/preguntasFrecuentes.html
+++ b/pages/preguntasFrecuentes.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description" content="Womap. La aplicación de seguimiento y seguridad creada por y para mujeres. Descargala en App Store y Play Store." />
+	<meta name="keywords" content="Womap, aplicación, aplicacion, app, seguridad, mujeres, seguimiento, ubicación, ubicacion, preguntas, pregunta, por que, como usar, info, informacion, información" />
     <link
       rel="shortcut icon"
       href="../img/logo womap png redondeado-08.png"
       type="image/x-icon"
     />
-    <title>Womap</title>
-    <link href="../styles/styles.css" rel="stylesheet" />
+    <title>Womap | Preguntas</title>
+    <link href="../css/style.css" rel="stylesheet" />
  	</head>
   	<body>
-		<section class="grid2">
+		<section>
 			<header class="fixed-top">
 				<div class="container">
 					<div class="row">
 						<nav class="navbar navbar-expand-lg">
 							<div class="container-fluid">
-							  <a class="navbar-brand text-white fs-3" href="#">Womap</a>
+							  <a class="navbar-brand text-white fs-3" href="../index.html">Womap</a>
 							  <button class="navbar-toggler w-25 p-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"></span>
 							  </button>
@@ -48,6 +50,7 @@
 				</div>
 			</header>
 			<head>
+				<!--vector-->
 				<div>
 					<div class="divImagen">
 						<img
@@ -62,7 +65,7 @@
 				<div>
 					<div class="pregs">
 						<h1>Preguntas frecuentes</h1>
-						<div>
+						<div> <!--preg 1-->
 							<div>
 								<h4 class="pregFrec">Pregunta 1</h4>
 							</div>
@@ -89,7 +92,7 @@
 								</p>
 							</div>
 						</div>
-						<div>
+						<div> <!--preg 2-->
 							<div>
 								<h4 class="pregFrec">Pregunta 2</h4>
 							</div>
@@ -109,7 +112,7 @@
 								</p>
 							</div>
 						</div>
-						<div>
+						<div> <!--preg 3-->
 							<div>
 								<h4 class="pregFrec">Pregunta 3</h4>
 							</div>
