--- a/pages/sobrenosotras.html
+++ b/pages/sobrenosotras.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description" content="Womap. La aplicación de seguimiento y seguridad creada por y para mujeres. Descargala en App Store y Play Store." />
+		<meta name="keywords" content="aplicación, aplicacion, app, seguridad, mujeres, seguimiento, ubicación, ubicacion, info, información, informacion" />
     <link
       rel="shortcut icon"
       href="../img/logo womap png redondeado-08.png"
       type="image/x-icon"
     />
-    <title>Womap</title>
-    <link href="../styles/styles.css" rel="stylesheet" />
+    <title>Womap | Sobre Nosotras</title>
+    <link href="../css/style.css" rel="stylesheet" />
 	</head>
 	<body class="bodyNosotras">
 		<header class="fixed-top">
@@ -18,7 +20,7 @@
 				<div class="row">
 					<nav class="navbar navbar-expand-lg">
 						<div class="container-fluid">
-							<a class="navbar-brand text-white fs-3" href="#">Womap</a>
+							<a class="navbar-brand text-white fs-3" href="../index.html">Womap</a>
 							<button class="navbar-toggler w-25 p-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"></span>
 							</button>
@@ -78,33 +80,33 @@
 								id ullamcorper felis. Morbi ut dolor eu enim mollis feugiat eu
 								quis ex. Suspendisse semper arcu id nibh dapibus, quis dapibus
 								tellus rutrum. Fusce sollicitudin lorem viverra justo congue
-								eleifend. Sed faucibus condimentum nisi, ut aliquet leo sagittis
-								sit amet.
+								eleifend.
 							</p>
 						</div>
 					</div>
+					<!--circulos-->
 					<div class="circTx1">
 						<img
-							class="circ d-none d-md-block"
+							class="circ d-none d-lg-block"
 							id="circ1"
 							src="../img/circulos rosas 1-05.png"
-							alt=""
+							alt="9 de cada 10 mujeres sufrió acoso callejero alguna vez"
 						/>
 					</div>
 					<div class="circTx2">
 						<img
-							class="circ d-none d-md-block"
+							class="circ d-none d-lg-block"
 							id="circ2"
 							src="../img/circulos rosas 2-06.png"
-							alt=""
+							alt="9 de cada 10 se mantienen comunicadas cuando viajan en taxi, remis, u otras similares"
 						/>
 					</div>
 					<div class="circTx3">
 						<img
-							class="circ d-none d-md-block"
+							class="circ d-none d-lg-block"
 							id="circ3"
 							src="../img/circulos rosas 3-07.png"
-								alt=""
+								alt="8 de cada 10 prefieren que la sacompañen a la parada que las esperen allí"
 						/>
 					</div>
 				</div>
